Enable Traefik dashboard

--- a/cluster/infrastructure/helmchartconfig/helmchartconfig/helmchartconfig.yaml
+++ b/cluster/infrastructure/helmchartconfig/helmchartconfig/helmchartconfig.yaml
@@ -1,6 +1,4 @@
 ---
-# Creating a custom HelmChartConfig to allow Traefik to talk to self-signed certificates
-# https://github.com/k3s-io/k3s/issues/1313
 apiVersion: helm.cattle.io/v1
 kind: HelmChartConfig
 metadata:
@@ -9,4 +7,14 @@ metadata:
 spec:
   valuesContent: |-
     globalArguments:
-    - "--serversTransport.insecureSkipVerify=true"
+      # Log level: TRACE, DEBUG, INFO, WARN, ERROR, FATAL, PANIC
+      # https://doc.traefik.io/traefik/observability/logs/
+      - "--log.level=WARN"
+      # Enable the Traefik dashboard
+      # https://doc.traefik.io/traefik/operations/dashboard/
+      - "--api"
+      - "--api.dashboard=true"
+      - "--api.insecure=false"
+      # Creating a custom HelmChartConfig to allow Traefik to talk to self-signed certificates
+      # https://github.com/k3s-io/k3s/issues/1313
+      - "--serversTransport.insecureSkipVerify=true"
