--- a/cluster/apps/traefik-dashboard/traefik-dashboard.yaml
+++ b/cluster/apps/traefik-dashboard/traefik-dashboard.yaml
@@ -32,7 +32,7 @@ metadata:
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-production
     cert-manager.io/private-key-algorithm: RSA
-    cert-manager.io/private-key-size: 4096
+    cert-manager.io/private-key-size: "4096"
     cert-manager.io/private-key-rotation-policy: Always
     traefik.ingress.kubernetes.io/router.tls: "true"
     traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-auth@kubernetescrd
@@ -43,6 +43,13 @@ spec:
       http:
         paths:
           - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: traefik-dashboard-service
+                port:
+                  number: 9000
+          - path: /metrics
             pathType: Prefix
             backend:
               service:
