Add Prometheus namespace and charts

--- a/cluster/namespaces/namespaces.yaml
+++ b/cluster/namespaces/namespaces.yaml
@@ -42,6 +42,11 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: prometheus
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: registry
 ---
 apiVersion: v1
