--- a/cluster/apps/prometheus/prometheus/helmrelease.yaml
+++ b/cluster/apps/prometheus/prometheus/helmrelease.yaml
@@ -24,19 +24,20 @@ spec:
       retries: 5
   # https://github.com/prometheus-community/helm-charts/blob/main/charts/prometheus/values.yaml
   values:
-    ingress:
-      enabled: false
-    persistentVolume:
-      enabled: true
-      storageClass: "local-path-customized"
-      size: 8Gi
-    service:
-      type: ClusterIP
-    alertmanager:
-      enabled: false
-    kube-state-metrics:
-      enabled: false
-    prometheus-node-exporter:
-      enabled: false
-    prometheus-pushgateway:
-      enabled: false
+    server:
+      ingress:
+        enabled: false
+      persistentVolume:
+        enabled: true
+        storageClass: local-path-customized
+        size: 8Gi
+      service:
+        type: ClusterIP
+      alertmanager:
+        enabled: false
+      kube-state-metrics:
+        enabled: false
+      prometheus-node-exporter:
+        enabled: false
+      prometheus-pushgateway:
+        enabled: false
