--- a/cluster/apps/prometheus/prometheus/helmrelease.yaml
+++ b/cluster/apps/prometheus/prometheus/helmrelease.yaml
@@ -25,6 +25,7 @@ spec:
   # https://github.com/prometheus-community/helm-charts/blob/main/charts/prometheus/values.yaml
   values:
     server:
+      baseURL: "prometheus-k3s.${SECRET_INTERNAL_DOMAIN_NAME}"
       ingress:
         enabled: true
         ingressClassName: traefik
