--- a/cluster/apps/prometheus/prometheus/helmrelease.yaml
+++ b/cluster/apps/prometheus/prometheus/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
           cert-manager.io/private-key-algorithm: RSA
-          cert-manager.io/private-key-size: 4096
+          cert-manager.io/private-key-size: "4096"
           cert-manager.io/private-key-rotation-policy: Always
           traefik.ingress.kubernetes.io/router.tls: "true"
         hosts:
