--- a/cluster/apps/codeserver/codeserver.yaml
+++ b/cluster/apps/codeserver/codeserver.yaml
@@ -32,7 +32,7 @@ spec:
     spec:
       containers:
         - name: codeserver
-          image: lscr.io/linuxserver/code-server:4.103.1
+          image: lscr.io/linuxserver/code-server:4.103.1@sha256:fd2d23e11a539e8fdf04ca535fd8ea675281f73ba2b45eaddb45a31f39af0f61
           ports:
             - containerPort: 8443
           env:
