--- a/cluster/apps/registry/registry.yaml
+++ b/cluster/apps/registry/registry.yaml
@@ -32,7 +32,7 @@ spec:
     spec:
       containers:
         - name: registry
-          image: registry:3.0.0
+          image: registry:3.0.0@sha256:1fc7de654f2ac1247f0b67e8a459e273b0993be7d2beda1f3f56fbf1001ed3e7
           ports:
             - containerPort: 5000
           env:
