--- a/cluster/apps/tools/drawio.yaml
+++ b/cluster/apps/tools/drawio.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: drawio
-          image: jgraph/drawio:28.0.9
+          image: jgraph/drawio:28.0.9@sha256:79cb86fc7f69b4d5a2b78097def23cb752ed680839b596f71fd10d0f86a2f9d6
           ports:
             - containerPort: 8080
           env:
