--- a/cluster/apps/tools/it-tools.yaml
+++ b/cluster/apps/tools/it-tools.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: it-tools
-          image: corentinth/it-tools:2024.10.22-7ca5933
+          image: corentinth/it-tools:2024.10.22-7ca5933@sha256:8b8128748339583ca951af03dfe02a9a4d7363f61a216226fc28030731a5a61f
           ports:
             - containerPort: 80
 ---
