--- a/cluster/apps/tools/spdf.yaml
+++ b/cluster/apps/tools/spdf.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: spdf
-          image: ghcr.io/stirling-tools/s-pdf:1.2.0
+          image: ghcr.io/stirling-tools/s-pdf:1.2.0@sha256:4b549915161efdf8a7c43bf0ad3b5d5d39f0cb0be58b7dcce1d1b62fbe8ed818
           ports:
             - containerPort: 8080
           env:
