--- a/scripts/.env_sample
+++ b/scripts/.env_sample
@@ -1,9 +1,8 @@
 # versions of applications
-# find latest stable k3s version here https://update.k3s.io/v1-release/channels
-export VERSION_K3S='v1.33.3+k3s1'
-export VERSION_HELM='v3.18.5'
-export VERSION_FLUX='2.6.4'
-export VERSION_CMCTL='2.3.0'
+export VERSION_K3S='v1.33.5+k3s1' # https://update.k3s.io/v1-release/channels
+export VERSION_HELM='v3.19.0'     # https://github.com/helm/helm/releases
+export VERSION_FLUX='2.7.2'       # https://github.com/fluxcd/flux2/releases
+export VERSION_CMCTL='2.3.0'      # https://github.com/cert-manager/cmctl/releases
 
 # Flux settings
 export GITHUB_USER='loganmarchione'
