--- a/cluster/namespaces/namespaces.yaml
+++ b/cluster/namespaces/namespaces.yaml
@@ -47,4 +47,9 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: reloader
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: tools
