--- a/cluster/infrastructure/storage/storage/storageclass.yaml
+++ b/cluster/infrastructure/storage/storage/storageclass.yaml
@@ -4,6 +4,8 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: local-path-customized
+  annotations:
+    defaultVolumeType: local
 provisioner: rancher.io/local-path
 volumeBindingMode: WaitForFirstConsumer
 # https://kubernetes.io/docs/tasks/administer-cluster/change-pv-reclaim-policy/
