--- a/cluster/charts/cnpg-charts.yaml
+++ b/cluster/charts/cnpg-charts.yaml
@@ -2,7 +2,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: cnpg
+  name: cnpg-charts
   namespace: flux-system
 spec:
   interval: 1h
