--- a/cluster/namespaces/namespaces.yaml
+++ b/cluster/namespaces/namespaces.yaml
@@ -32,6 +32,11 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: manyfold
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: pgadmin4
 ---
 apiVersion: v1
