--- a/cluster/apps/tools/whoami.yaml
+++ b/cluster/apps/tools/whoami.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: whoami-deployment
+  name: whoami
   namespace: tools
 spec:
   replicas: 3
@@ -24,7 +24,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: whoami-service
+  name: whoami
   namespace: tools
 spec:
   type: ClusterIP
@@ -39,7 +39,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: whoami-ingress
+  name: whoami
   namespace: tools
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-production
@@ -56,7 +56,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: whoami-service
+                name: whoami
                 port:
                   number: 80
   tls:
