--- a/cluster/apps/manyfold/manyfold/manyfold.yaml
+++ b/cluster/apps/manyfold/manyfold/manyfold.yaml
@@ -17,7 +17,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: manyfold-deployment
+  name: manyfold
   namespace: manyfold
 spec:
   replicas: 1
@@ -57,7 +57,7 @@ spec:
             - name: DEMO_MODE
               value: "false"
             - name: REDIS_URL
-              value: "valkey-service.manyfold.svc.cluster.local"
+              value: "valkey.manyfold.svc.cluster.local"
             - name: SECRET_KEY_BASE
               valueFrom:
                 secretKeyRef:
@@ -74,7 +74,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: manyfold-service
+  name: manyfold
   namespace: manyfold
 spec:
   type: ClusterIP
@@ -89,7 +89,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: manyfold-ingress
+  name: manyfold
   namespace: manyfold
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-production
@@ -106,7 +106,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: manyfold-service
+                name: manyfold
                 port:
                   number: 3214
   tls:
