--- a/cluster/apps/portainer/portainer/ingress.yaml
+++ b/cluster/apps/portainer/portainer/ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: portainer-ingress
+  name: portainer
   namespace: portainer
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-production
