--- a/cluster/apps/registry/registry.yaml
+++ b/cluster/apps/registry/registry.yaml
@@ -17,7 +17,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: registry-deployment
+  name: registry
   namespace: registry
 spec:
   replicas: 1
@@ -49,7 +49,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: registry-service
+  name: registry
   namespace: registry
 spec:
   type: ClusterIP
@@ -64,7 +64,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: registry-ingress
+  name: registry
   namespace: registry
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-production
@@ -81,7 +81,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: registry-service
+                name: registry
                 port:
                   number: 5000
   tls:
