--- a/cluster/apps/traefik-dashboard/traefik-dashboard.yaml
+++ b/cluster/apps/traefik-dashboard/traefik-dashboard.yaml
@@ -11,7 +11,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: traefik-dashboard-service
+  name: traefik-dashboard
   namespace: kube-system
   annotations:
     prometheus.io/scrape: "true"
@@ -36,7 +36,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: traefik-dashboard-ingress
+  name: traefik-dashboard
   namespace: kube-system
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-production
@@ -55,14 +55,14 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: traefik-dashboard-service
+                name: traefik-dashboard
                 port:
                   number: 9000
           - path: /metrics
             pathType: Prefix
             backend:
               service:
-                name: traefik-dashboard-service
+                name: traefik-dashboard
                 port:
                   number: 9102
   tls:
