--- a/cluster/apps/homebox/homebox/homebox.yaml
+++ b/cluster/apps/homebox/homebox/homebox.yaml
@@ -19,6 +19,8 @@ kind: Deployment
 metadata:
   name: homebox
   namespace: homebox
+  annotations:
+    reloader.stakater.com/auto: "true"
 spec:
   replicas: 1
   revisionHistoryLimit: 2
