--- a/cluster/apps/manyfold/manyfold/manyfold.yaml
+++ b/cluster/apps/manyfold/manyfold/manyfold.yaml
@@ -19,6 +19,8 @@ kind: Deployment
 metadata:
   name: manyfold
   namespace: manyfold
+  annotations:
+    reloader.stakater.com/auto: "true"
 spec:
   replicas: 1
   revisionHistoryLimit: 2
