--- a/cluster/apps/pgadmin4/pgadmin4.yaml
+++ b/cluster/apps/pgadmin4/pgadmin4.yaml
@@ -19,6 +19,8 @@ kind: Deployment
 metadata:
   name: pgadmin4
   namespace: pgadmin4
+  annotations:
+    reloader.stakater.com/auto: "true"
 spec:
   replicas: 1
   revisionHistoryLimit: 2
