--- a/cluster/apps/homebox/homebox/backup-cronjob.yaml
+++ b/cluster/apps/homebox/homebox/backup-cronjob.yaml
@@ -22,27 +22,21 @@ spec:
             - name: pg-backup
               image: ghcr.io/cloudnative-pg/postgresql:17.7-minimal-trixie@sha256:dd6f9cda42c24bcd8ee2b619516e2aa5ddc40317c00d55d808543cef51286701
               command:
-                - /bin/bash
+                - /bin/sh
                 - -c
-                - |
-                  set -e
-
-                  BACKUP_DIR="/backups"
-                  BACKUP_FILE="${BACKUP_DIR}/${APP_NAME}-$(date +%Y%m%d_%H%M).sql.gz"
-
-                  # Perform the backup
-                  echo "$(date +%Y%m%d_%H%M) - INFO: Starting backup of ${DATABASE_NAME}"
-                  pg_dump -h "${DATABASE_HOST}" -U "${PGUSER}" -d "${DATABASE_NAME}" | gzip > "${BACKUP_FILE}"
-
-                  # Verify backup file was created
+                - >
+                  set -e;
+                  BACKUP_DIR="/backups";
+                  BACKUP_FILE="${BACKUP_DIR}/postgres_${APP_NAME}_$(date +%Y%m%d_%H%M).sql.gz";
+                  echo "$(date +%Y%m%d_%H%M) - INFO: Starting backup of ${DATABASE_NAME}";
+                  pg_dump -h "${DATABASE_HOST}" -U "${PGUSER}" -d "${DATABASE_NAME}" | gzip > "${BACKUP_FILE}";
                   if [ -f "${BACKUP_FILE}" ]; then
-                    BACKUP_SIZE=$(du -h "${BACKUP_FILE}" | cut -f1)
-                    echo "$(date +%Y%m%d_%H%M) - INFO: Backup completed successfully: ${BACKUP_FILE} (${BACKUP_SIZE})"
+                    BACKUP_SIZE=$(du -h "${BACKUP_FILE}" | cut -f1);
+                    echo "$(date +%Y%m%d_%H%M) - INFO: Backup completed successfully: ${BACKUP_FILE} (${BACKUP_SIZE})";
                   else
-                    echo "$(date +%Y%m%d_%H%M) - ERROR: Backup file was not created"
-                    exit 1
-                  fi
-
+                    echo "$(date +%Y%m%d_%H%M) - ERROR: Backup file was not created";
+                    exit 1;
+                  fi;
                   echo "$(date +%Y%m%d_%H%M) - INFO: Backup process completed"
               env:
                 ########################################
