--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -45,7 +45,8 @@
         "custom.regex"
       ],
       "matchUpdateTypes": [
-        "patch"
+        "patch",
+        "digest"
       ],
       "automerge": true,
       "automergeType": "pr",
